[gd_scene load_steps=33 format=2]

[ext_resource path="res://castle2_2.escn" type="PackedScene" id=1]
[ext_resource path="res://Materiales/metal.tres" type="Material" id=2]
[ext_resource path="res://Materiales/bricks2.tres" type="Material" id=3]
[ext_resource path="res://Materiales/marble2.tres" type="Material" id=4]
[ext_resource path="res://Materiales/marble_columnas.tres" type="Material" id=5]
[ext_resource path="res://CameraYaw.gd" type="Script" id=6]
[ext_resource path="res://Materiales/ajedrez.tres" type="Material" id=7]
[ext_resource path="res://AnimationPlayer.gd" type="Script" id=8]
[ext_resource path="res://AnimationPlayerPalanca.gd" type="Script" id=9]
[ext_resource path="res://AnimationPlayerLuz.gd" type="Script" id=10]
[ext_resource path="res://syferfontein_0d_clear_1k.hdr" type="Texture" id=11]
[ext_resource path="res://Materiales/Espejo/Metal012_1K_Color.jpg" type="Texture" id=12]
[ext_resource path="res://Materiales/Espejo/Metal012_1K_NormalDX.jpg" type="Texture" id=13]
[ext_resource path="res://Materiales/Espejo/Metal012_1K_Roughness.jpg" type="Texture" id=14]
[ext_resource path="res://Materiales/Espejo/Metal012_1K_Metalness.jpg" type="Texture" id=15]
[ext_resource path="res://Materiales/Espejo/Metal012_1K_Displacement.jpg" type="Texture" id=16]
[ext_resource path="res://castleexterior2.tscn" type="PackedScene" id=17]
[ext_resource path="res://floor.tscn" type="PackedScene" id=18]
[ext_resource path="res://Test.gd" type="Script" id=19]
[ext_resource path="res://Camera2.gd" type="Script" id=20]
[ext_resource path="res://Camera3.gd" type="Script" id=21]
[ext_resource path="res://Label.gd" type="Script" id=22]

[sub_resource type="SpatialMaterial" id=3]
params_diffuse_mode = 2
albedo_texture = ExtResource( 12 )
metallic = 0.5
metallic_texture = ExtResource( 15 )
roughness = 0.0
roughness_texture = ExtResource( 14 )
normal_enabled = true
normal_scale = 7.27
normal_texture = ExtResource( 13 )
depth_enabled = true
depth_scale = 16.0
depth_deep_parallax = false
depth_flip_tangent = false
depth_flip_binormal = false
depth_texture = ExtResource( 16 )

[sub_resource type="PanoramaSky" id=6]
radiance_size = 1
panorama = ExtResource( 11 )

[sub_resource type="Environment" id=7]
background_mode = 2
background_sky = SubResource( 6 )
background_sky_custom_fov = 44.2
background_energy = 0.12
ambient_light_energy = 0.0
ss_reflections_enabled = true

[sub_resource type="Animation" id=8]
resource_name = "Luz"
length = 3.0
step = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.587, -0.25, 0, 0.25, 0, 0.256, -0.25, 0, 0.25, 0, 1.587, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 3 )
}

[sub_resource type="Animation" id=9]
resource_name = "Luz"
length = 3.0
step = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.587, -0.25, 0, 0.25, 0, 0.256, -0.25, 0, 0.25, 0, 1.587, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 3 )
}

[sub_resource type="Animation" id=11]
resource_name = "Luz"
length = 3.0
step = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.587, -0.25, 0, 0.25, 0, 0.256, -0.25, 0, 0.25, 0, 1.587, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 3 )
}

[sub_resource type="Animation" id=15]
resource_name = "Luz"
length = 3.0
step = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.587, -0.25, 0, 0.25, 0, 0.256, -0.25, 0, 0.25, 0, 1.587, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 3 )
}

[sub_resource type="Animation" id=12]
resource_name = "Luz"
length = 3.0
step = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.587, -0.25, 0, 0.25, 0, 0.256, -0.25, 0, 0.25, 0, 1.587, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 3 )
}

[sub_resource type="Animation" id=13]
resource_name = "Luz"
length = 3.0
step = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.587, -0.25, 0, 0.25, 0, 0.256, -0.25, 0, 0.25, 0, 1.587, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 3 )
}

[sub_resource type="Animation" id=14]
resource_name = "Luz"
length = 3.0
step = 1.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.587, -0.25, 0, 0.25, 0, 0.256, -0.25, 0, 0.25, 0, 1.587, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.5, 3 )
}

[node name="castle2_2" instance=ExtResource( 1 )]

[node name="Cylinder003" parent="." index="1"]
material/0 = ExtResource( 4 )

[node name="Cube" parent="." index="2"]
material/0 = ExtResource( 4 )

[node name="Cube001" parent="." index="3"]
material/0 = ExtResource( 4 )

[node name="Cube003" parent="." index="4"]
material/0 = ExtResource( 4 )

[node name="Cube002" parent="." index="5"]
material/0 = ExtResource( 4 )

[node name="Cube004" parent="." index="6"]
material/0 = ExtResource( 4 )

[node name="Cube005" parent="." index="7"]
material/0 = ExtResource( 4 )

[node name="Cube006" parent="." index="8"]
material/0 = ExtResource( 4 )

[node name="Cube007" parent="." index="9"]
material/0 = ExtResource( 4 )

[node name="Cube008" parent="." index="10"]
material/0 = ExtResource( 4 )

[node name="Cube009" parent="." index="11"]
material/0 = ExtResource( 4 )

[node name="Torreon" parent="." index="12"]
material/0 = ExtResource( 4 )

[node name="Cube012" parent="." index="13"]
material/0 = ExtResource( 4 )

[node name="MiniTorres Superiores" parent="." index="14"]
material/0 = ExtResource( 4 )

[node name="MiniTorres Superiores 2" parent="." index="15"]
material/0 = ExtResource( 4 )

[node name="Torre" parent="." index="16"]
material/0 = ExtResource( 4 )

[node name="Torre001" parent="." index="17"]
material/0 = ExtResource( 4 )

[node name="Torreon Alto" parent="." index="18"]
material/0 = ExtResource( 4 )

[node name="Torreon001" parent="." index="19"]
material/0 = ExtResource( 4 )

[node name="Cylinder001" parent="." index="20"]
material/0 = ExtResource( 4 )

[node name="Cylinder002" parent="." index="21"]
material/0 = ExtResource( 4 )

[node name="Torres Sombrero" parent="." index="22"]
material/0 = ExtResource( 4 )

[node name="Torres Sombrero001" parent="." index="23"]
material/0 = ExtResource( 4 )

[node name="Decoracion Solevado" parent="." index="24"]
material/0 = ExtResource( 2 )

[node name="Decoracion Solevado001" parent="." index="25"]
material/0 = ExtResource( 5 )

[node name="Campana002" parent="." index="26"]
material/0 = ExtResource( 2 )

[node name="Campana" parent="." index="27"]
material/0 = ExtResource( 2 )

[node name="Viga" parent="." index="28"]
material/0 = ExtResource( 4 )

[node name="Campana001" parent="." index="29"]
material/0 = ExtResource( 2 )

[node name="Viga001" parent="." index="30"]
material/0 = ExtResource( 4 )

[node name="Castillo Exterior" parent="." index="31"]
transform = Transform( 1.13867, 0, 0, 0, 2.36859, 0, 0, 0, 1.10584, 4.14737, 2.39813, 4.0528 )
visible = false
material/0 = ExtResource( 3 )

[node name="castleexterior2" parent="." index="32" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.03, 0, 0 )

[node name="Escaleras" parent="." index="33"]
material/0 = ExtResource( 5 )

[node name="Pared 1" parent="." index="34"]
transform = Transform( 0.0632816, 0, 0, 0, 2.15936, 0, 0, 0, 4.38678, 0.720916, 2.40687, 2.56738 )
visible = false
material/0 = ExtResource( 3 )

[node name="Pared 1001" parent="." index="35"]
transform = Transform( -2.76613e-09, 0, 1.77496, 0, 1.03011, 0, -0.0632816, 0, -7.7586e-08, -1.13057, 1.16504, 5.69868 )
material/0 = ExtResource( 3 )

[node name="Pisos" parent="." index="36"]
transform = Transform( 1.1, 0, 0, 0, 0.115, 0, 0, 0, 1.079, 4.114, 2.091, 4.026 )
material/0 = ExtResource( 7 )

[node name="Escaleras Circulares" parent="." index="37"]
material/0 = ExtResource( 5 )

[node name="Cilindro" parent="." index="39"]
material/0 = ExtResource( 2 )

[node name="Puerta Animacion" parent="." index="40"]
transform = Transform( 0.0660019, 0, 0, 0, 0.640923, 0, 0, 0, 0.46547, 0.59959, 3.71508, 2.16322 )
material/0 = SubResource( 3 )

[node name="AnimationPlayer" parent="Puerta Animacion" index="0"]
script = ExtResource( 8 )

[node name="Cube010" parent="." index="41"]
material/0 = ExtResource( 2 )

[node name="Cube011" parent="." index="42"]
transform = Transform( -0.221437, 0, -8.11697e-09, 0, 0.694055, 0, 1.93586e-08, 0, -0.0928473, -0.905461, 3.58969, -1.18002 )
material/0 = ExtResource( 2 )

[node name="Cube013" parent="." index="43"]
material/0 = ExtResource( 2 )

[node name="Cube014" parent="." index="44"]
material/0 = ExtResource( 2 )

[node name="Cylinder" parent="." index="45"]
material/0 = ExtResource( 5 )

[node name="Cube015" parent="." index="46"]
material/0 = ExtResource( 7 )

[node name="Camera" type="Camera" parent="." index="47"]
transform = Transform( 0.939639, 0.107313, -0.324904, 0, 0.949546, 0.313628, 0.342168, -0.294697, 0.89223, -2.05849, 3.6532, 6.14054 )

[node name="Palanca Arriba" parent="." index="48"]
transform = Transform( 0.0157885, 0, 0, 0, 0.0907547, 0.00943545, 0, -0.105976, 0.00808027, -2.13886, 2.24158, -0.244309 )
material/0 = ExtResource( 4 )

[node name="AnimationPlayer" parent="Palanca Arriba" index="0"]
script = ExtResource( 9 )

[node name="Base Palanca" parent="." index="49"]
material/0 = ExtResource( 5 )

[node name="floor" parent="." index="50" instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9816, 0 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="51"]
environment = SubResource( 7 )

[node name="OmniLight" type="OmniLight" parent="." index="52"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.47612, 3.50549, 2.06353 )
light_energy = 1.587
shadow_enabled = true
shadow_contact = 2.752
omni_range = 2.362
omni_attenuation = 0.757859

[node name="AnimationPlayer" type="AnimationPlayer" parent="OmniLight" index="0"]
anims/Luz = SubResource( 8 )
script = ExtResource( 10 )

[node name="OmniLight3" type="OmniLight" parent="." index="53"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -3.95903, 3.50549, 4.78785 )
light_energy = 1.587
shadow_enabled = true
shadow_contact = 0.183
omni_range = 2.362
omni_attenuation = 0.392293

[node name="AnimationPlayer" type="AnimationPlayer" parent="OmniLight3" index="0"]
anims/Luz = SubResource( 9 )
script = ExtResource( 10 )

[node name="OmniLight5" type="OmniLight" parent="." index="54"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.119847, 3.15782, 3.74693 )
light_energy = 1.587
shadow_enabled = true
shadow_contact = 0.015
omni_range = 2.362
omni_attenuation = 0.757859

[node name="AnimationPlayer" type="AnimationPlayer" parent="OmniLight5" index="0"]
anims/Luz = SubResource( 11 )
script = ExtResource( 10 )

[node name="OmniLight26" type="OmniLight" parent="." index="55"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.119847, 3.15782, 6.15288 )
light_energy = 1.587
shadow_enabled = true
shadow_contact = 0.972
omni_range = 2.362
omni_attenuation = 0.757859

[node name="AnimationPlayer" type="AnimationPlayer" parent="OmniLight26" index="0"]
anims/Luz = SubResource( 15 )
script = ExtResource( 10 )

[node name="OmniLight8" type="OmniLight" parent="." index="56"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3.64515, 3.15782, 4.03758 )
light_energy = 1.587
shadow_enabled = true
omni_range = 2.362
omni_attenuation = 0.757859

[node name="OmniLight2" type="OmniLight" parent="." index="57"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.0311466, 3.50549, 0.849113 )
light_energy = 1.587
shadow_enabled = true
omni_range = 2.362
omni_attenuation = 0.757859

[node name="AnimationPlayer" type="AnimationPlayer" parent="OmniLight2" index="0"]
anims/Luz = SubResource( 12 )
script = ExtResource( 10 )

[node name="OmniLight6" type="OmniLight" parent="." index="58"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.0125064, 3.68577, -0.184128 )
light_energy = 1.587
light_specular = 2.702
shadow_enabled = true
omni_range = 1.99669
omni_attenuation = 0.392292

[node name="AnimationPlayer" type="AnimationPlayer" parent="OmniLight6" index="0"]
anims/Luz = SubResource( 13 )
script = ExtResource( 10 )

[node name="OmniLight9" type="OmniLight" parent="." index="59"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.255732, 1.08325, -0.184128 )
light_energy = 0.853
light_specular = 2.702
shadow_enabled = true
shadow_contact = 0.696
omni_range = 1.99669
omni_attenuation = 0.683021

[node name="OmniLight17" type="OmniLight" parent="." index="60"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.18956, 1.08325, -2.43528 )
light_energy = 0.853
light_specular = 2.702
shadow_enabled = true
shadow_contact = 0.734
omni_range = 1.99669
omni_attenuation = 0.683021

[node name="OmniLight20" type="OmniLight" parent="." index="61"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.882496, 3.86097, -2.43528 )
light_energy = 0.853
light_specular = 2.702
shadow_enabled = true
shadow_contact = 0.783
omni_range = 1.99669
omni_attenuation = 0.683021

[node name="OmniLight21" type="OmniLight" parent="." index="62"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0707223, 6.7217, -2.43528 )
light_energy = 0.853
light_specular = 2.702
shadow_enabled = true
shadow_contact = 1.652
omni_range = 1.99669
omni_attenuation = 0.683021

[node name="OmniLight22" type="OmniLight" parent="." index="63"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.75323, 3.36896, -0.461444 )
light_energy = 0.853
light_specular = 2.702
shadow_enabled = true
omni_range = 1.99669
omni_attenuation = 0.683021

[node name="OmniLight23" type="OmniLight" parent="." index="64"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 5.88786, 3.36896, 3.78337 )
light_energy = 0.853
light_specular = 2.702
shadow_enabled = true
omni_range = 1.99669
omni_attenuation = 0.683021

[node name="OmniLight24" type="OmniLight" parent="." index="65"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -5.85613, 3.36896, 3.78338 )
light_energy = 0.853
light_specular = 2.702
shadow_enabled = true
omni_range = 1.99669
omni_attenuation = 0.683021

[node name="OmniLight25" type="OmniLight" parent="." index="66"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3.77759, 3.36896, -0.692725 )
light_energy = 0.853
light_specular = 2.702
shadow_enabled = true
omni_range = 1.99669
omni_attenuation = 0.683021

[node name="OmniLight18" type="OmniLight" parent="." index="67"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 1.2457, 1.08325, -2.43528 )
light_energy = 0.853
light_specular = 2.702
shadow_enabled = true
shadow_contact = 1.743
omni_range = 1.99669
omni_attenuation = 0.683021

[node name="OmniLight19" type="OmniLight" parent="." index="68"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 1.2457, 3.84378, -2.43528 )
light_energy = 0.853
light_specular = 2.702
shadow_enabled = true
shadow_contact = 1.391
omni_range = 1.99669
omni_attenuation = 0.683021

[node name="OmniLight12" type="OmniLight" parent="." index="69"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.255732, 1.08325, 2.63302 )
light_energy = 0.853
light_specular = 2.702
shadow_enabled = true
shadow_contact = 0.783
omni_range = 1.99669
omni_attenuation = 0.683021

[node name="OmniLight13" type="OmniLight" parent="." index="70"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3.56571, 1.08325, 3.63736 )
light_energy = 0.853
light_specular = 2.702
shadow_enabled = true
shadow_contact = 1.217
omni_range = 1.99669
omni_attenuation = 0.683021

[node name="OmniLight15" type="OmniLight" parent="." index="71"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.7336, 1.08325, 6.71582 )
light_energy = 0.853
light_specular = 2.702
shadow_enabled = true
shadow_contact = 1.559
omni_range = 1.99669
omni_attenuation = 0.683021

[node name="OmniLight16" type="OmniLight" parent="." index="72"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.37381, 1.44144, 6.12159 )
light_energy = 0.853
light_specular = 2.702
shadow_enabled = true
omni_range = 1.99669
omni_attenuation = 0.683021

[node name="OmniLight14" type="OmniLight" parent="." index="73"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.46893, 1.08325, 0.233755 )
light_energy = 0.853
light_specular = 2.702
shadow_enabled = true
shadow_contact = 1.304
omni_range = 1.99669
omni_attenuation = 0.683021

[node name="OmniLight10" type="OmniLight" parent="." index="74"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.21302, 1.08325, -0.184128 )
light_energy = 0.853
light_specular = 2.702
shadow_enabled = true
shadow_contact = 1.101
omni_range = 1.99669
omni_attenuation = 0.683021

[node name="OmniLight11" type="OmniLight" parent="." index="75"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.21302, 1.08325, 3.73025 )
light_energy = 0.853
light_specular = 2.702
shadow_enabled = true
shadow_contact = 0.174
omni_range = 1.99669
omni_attenuation = 0.683021

[node name="OmniLight7" type="OmniLight" parent="." index="76"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.17568, 3.68577, -0.184128 )
light_energy = 1.587
light_specular = 2.702
shadow_enabled = true
shadow_contact = 3.486
omni_range = 1.99669
omni_attenuation = 0.554785

[node name="AnimationPlayer" type="AnimationPlayer" parent="OmniLight7" index="0"]
anims/Luz = SubResource( 14 )
script = ExtResource( 10 )

[node name="Control" type="Control" parent="." index="77"]
margin_left = 16.0
margin_top = 19.0
margin_right = 56.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control" index="0"]
margin_right = 114.0
margin_bottom = 65.0
text = "Moverse Hacia Delante: W
Moverse Hacia Atras: S
Moverse Hacia Izqda A
Moverse Hacia Dcha D

Camara 1:  1
Camara 2 : 2
Camara Player: 3

Mostrar/Ocultar Tutorial: T"
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Test" type="Control" parent="." index="78"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2" type="Camera" parent="Test" index="0"]
transform = Transform( 0.919554, 0, -0.392963, 0, 1, 0, 0.392963, 0, 0.919554, -1.79056, 2.8848, 6.19345 )
script = ExtResource( 20 )

[node name="Camera3" type="Camera" parent="Test" index="1"]
transform = Transform( -0.858163, 0.177251, 0.481807, 0, 0.938505, -0.345265, -0.513377, -0.296294, -0.805391, 4.50339, 1.29408, -7.12812 )
script = ExtResource( 21 )

[node name="Player" type="Spatial" parent="Test" index="2"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 1.01952, 0 )

[node name="CameraPlayer" type="Camera" parent="Test/Player" index="0"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0.591253, 1.975 )
current = true
near = 0.49
script = ExtResource( 6 )

[connection signal="camera_1" from="Test" to="Puerta Animacion/AnimationPlayer" method="_on_Test_camera_1"]
[connection signal="camera_1" from="Test" to="Test/Camera2" method="_on_Test_camera_1"]
[connection signal="camera_2" from="Test" to="Test/Camera3" method="_on_Test_camera_2"]
[connection signal="camera_player" from="Test" to="Test/Player/CameraPlayer" method="_on_Test_camera_player"]
